actualizacion de idioma

--- a/LandingSaucedaRayos.html
+++ b/LandingSaucedaRayos.html
@@ -86,24 +86,24 @@
 <body>
     <!-- Portada -->
     <header>
-        <h1>Bienvenido a mi pagina</h1>
-        <p>Hola, mi nombre es Alejandro Rayos. Esta es una pequeña página con un poco sobre mí.</p>
+        <h1>Welcome to my page</h1>
+        <p>Hello, my name is Alejandro Rayos. This is a small page with a little about me.</p>
     </header>
 
     <!-- Hobbies -->
     <section id="hobbies">
-        <h2>Algunos hobbies que tengo son: </h2>
+        <h2>Some hobbies I have are: </h2>
         <ul>
-            <li>Lectura</li>
-            <li>Escuchar musica</li>
-            <li>Practicar y ver deportes</li>
-            <li>Jugar videojuegos</li>
+            <li>Reading</li>
+            <li>Listening to music</li>
+            <li>Practicing and watching sports</li>
+            <li>Playing video games</li>
         </ul>
     </section>
 
     <!-- Series o Películas Favoritas -->
     <section id="favoritos">
-        <h2>Algunas de mis series y peliculas favoritas</h2>
+        <h2>Some of my favorite series and movies</h2>
         <ul>
             <li>Parks and recreation</li>
             <li>The office</li>
@@ -114,8 +114,8 @@
 
     <!-- Contacto -->
     <footer id="contacto">
-        <h2>Contacto</h2>
-        <p>Puedes contactarme en:</p>
+        <h2>Contact</h2>
+        <p>You can reach me at:</p>
         <ul>
             <li>Email: raul.sauceda@potros.itson.edu.mx</li>
         </ul>
